src/objects/Aggregate_Order_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Aggregate Order Details</relationshipLabel>
        <relationshipName>Aggregate_Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aggregate_Order__c</fullName>
        <description>The order that owns the aggregate order</description>
        <label>Aggregate Order</label>
        <referenceTo>AggregateOrder__c</referenceTo>
        <relationshipLabel>Aggregate Order Details</relationshipLabel>
        <relationshipName>Aggregate_Order_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hub__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hub</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Aggregate Order Details</relationshipLabel>
        <relationshipName>Aggregate_Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Tolerance__c</fullName>
        <label>Max_Tolerance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Tolerance__c</fullName>
        <label>Min_Tolerance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>The number of the order that the account has placed</description>
        <label>Order Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>The status of the individual energy supplier hub orders at the time this order was created</description>
        <label>Order Status</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Aggregate Order Details</relationshipLabel>
        <relationshipName>Aggregate_Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Aggregate Order Details</relationshipLabel>
        <relationshipName>Aggregate_Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Aggregate Order Detail</label>
    <nameField>
        <label>Aggregate Order Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aggregate Order Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>